--- a/_variables.scss
+++ b/_variables.scss
@@ -1,4 +1,5 @@
 $fallback-font-stack: Helvetica, Arial, Sans-Serif !default;
 $default-font-family: "Open Sans" !default;
-$base-line-height: 14px !default;
+$base-line-height: 12px !default;
 $base-font-size: 16px !default;
+$visual-grid: true !default;
