--- a/_variables.scss
+++ b/_variables.scss
@@ -1,5 +1,6 @@
 $fallback-font-stack: Helvetica, Arial, Sans-Serif !default;
 $default-font-family: "Open Sans" !default;
-$base-line-height: 12px !default;
+$default-trailing-space: 2 !default;
+$base-line-height: 14px !default;
 $base-font-size: 16px !default;
 $visual-grid: true !default;
