--- a/font-settings/_font-settings-12.scss
+++ b/font-settings/_font-settings-12.scss
@@ -1,67 +1,31 @@
 $lh: 12px;
 $base-base-fonts-12: (
     'open-sans': (
-      10px:('d':p2b(1px,$lh)),
-      11px:('d':p2b(8px,$lh)),
-      12px:('d':p2b(7px,$lh)),
-      13px:('d':p2b(7px,$lh)),
+      10px:('d':p2b(2px,$lh)),
+      12px:('d':p2b(8px,$lh)),
       14px:('d':p2b(7px,$lh)),
-      15px:('d':p2b(6px,$lh)),
       16px:('d':p2b(6px,$lh)),
-      17px:('d':p2b(5px,$lh)), 
       18px:('d':p2b(5px,$lh)), 
-      19px:('d':p2b(5px,$lh)),
-      20px:('d':p2b(4px,$lh)),
-      21px:('d':p2b(4px,$lh)),
-      22px:('d':p2b(4px,$lh)),
-      23px:('d':p2b(9px,$lh)),
+      20px:('d':p2b(5px,$lh)),
+      22px:('d':p2b(3px,$lh)),
       24px:('d':p2b(9px,$lh)),
-      25px:('d':p2b(8px,$lh)),
       26px:('d':p2b(8px,$lh)),
-      // here
-      27px:('d':p2b(0px,$lh)),
-      28px:('d':p2b(0px,$lh)),
-      29px:('d':p2b(0px,$lh)),
-      30px:('d':p2b(0px,$lh)),
-      31px:('d':p2b(0px,$lh)),
-      32px:('d':p2b(0px,$lh)),
-      33px:('d':p2b(0px,$lh)),
-      34px:('d':p2b(0px,$lh)),
-      35px:('d':p2b(0px,$lh)),
-      36px:('d':p2b(0px,$lh)),
-      37px:('d':p2b(0px,$lh)),
-      38px:('d':p2b(0px,$lh)),
-      39px:('d':p2b(0px,$lh)),
-      40px:('d':p2b(0px,$lh)),
-      41px:('d':p2b(0px,$lh)),
-      42px:('d':p2b(0px,$lh)),
-      43px:('d':p2b(0px,$lh)),
-      44px:('d':p2b(0px,$lh)),
-      45px:('d':p2b(0px,$lh)),
-      46px:('d':p2b(0px,$lh)),
-      47px:('d':p2b(0px,$lh)),
+      28px:('d':p2b(7px,$lh)),
+      30px:('d':p2b(7px,$lh)),
+      32px:('d':p2b(6px,$lh)),
+      34px:('d':p2b(5px,$lh)),
+      36px:('d':p2b(11px,$lh)),
+      38px:('d':p2b(9px,$lh)),
+      40px:('d':p2b(9px,$lh)),
+      42px:('d':p2b(8px,$lh)),
+      44px:('d':p2b(7px,$lh)),
+      46px:('d':p2b(6px,$lh)),
       48px:('d':p2b(0px,$lh)),
-      49px:('d':p2b(0px,$lh)),
-      50px:('d':p2b(0px,$lh)),
-      51px:('d':p2b(0px,$lh)),
-      52px:('d':p2b(0px,$lh)),
-      53px:('d':p2b(0px,$lh)),
-      54px:('d':p2b(0px,$lh)),
-      55px:('d':p2b(0px,$lh)),
-      56px:('d':p2b(0px,$lh)),
-      57px:('d':p2b(0px,$lh)),
-      58px:('d':p2b(0px,$lh)),
-      59px:('d':p2b(0px,$lh)),
-      60px:('d':p2b(0px,$lh)),
-      61px:('d':p2b(0px,$lh)),
-      62px:('d':p2b(0px,$lh)),
-      63px:('d':p2b(0px,$lh)),
-      64px:('d':p2b(0px,$lh)),
-      65px:('d':p2b(0px,$lh)),
-      66px:('d':p2b(0px,$lh)),
-      67px:('d':p2b(0px,$lh)),
-      68px:('d':p2b(0px,$lh)),
-      69px:('d':p2b(0px,$lh)),
-      70px:('d':p2b(0px,$lh)),
+      50px:('d':p2b(11px,$lh)),
+      52px:('d':p2b(10px,$lh)),
+      54px:('d':p2b(9px,$lh)),
+      56px:('d':p2b(8px,$lh)),
+      58px:('d':p2b(8px,$lh)),
+      60px:('d':p2b(1px,$lh))
       )
   );
