--- a/font-settings/_font-settings-16.scss
+++ b/font-settings/_font-settings-16.scss
@@ -1,574 +1,61 @@
 $lh: 16px;
 $base-base-fonts-16: (
-    'adelle': (
-      12px:('d':p2b(4px,$lh)),
-      14px:('d':p2b(11px,$lh)),
-      16px:('d':p2b(11px,$lh), 1:p2b(3px,$lh)),
-      18px:('d':p2b(10px,$lh)),
-      20px:('d':p2b(9px,$lh)),
-      21px:('d':p2b(9px,$lh)),
-      22px:('d':p2b(9px,$lh)),
-      24px:('d':p2b(8px,$lh)),
-      26px:('d':p2b(7px,$lh)),
-      28px:('d':p2b(7px,$lh)),
-      30px:('d':p2b(14px,$lh)),
-      32px:('d':p2b(13px,$lh)),
-      34px:('d':p2b(13px,$lh)),
-      36px:('d':p2b(11px,$lh)),
-      38px:('d':p2b(11px,$lh)),
-      40px:('d':p2b(10px,$lh)),
-      42px:('d':p2b(9px,$lh))
-      ),
-    'aleo': (
-      12px:('d':p2b(4px,$lh)),
-      14px:('d':p2b(11px,$lh)),
-      16px:('d':p2b(10px,$lh)),
-      18px:('d':p2b(10px,$lh)),
-      20px:('d':p2b(9px,$lh)),
-      22px:('d':p2b(8px,$lh)),
-      24px:('d':p2b(8px,$lh)),
-      26px:('d':p2b(7px,$lh)),
-      28px:('d':p2b(6px,$lh)),
-      30px:('d':p2b(13px,$lh)),
-      32px:('d':p2b(13px,$lh)),
-      34px:('d':p2b(12px,$lh)),
-      36px:('d':p2b(11px,$lh)),
-      38px:('d':p2b(11px,$lh)),
-      40px:('d':p2b(10px,$lh)),
-      42px:('d':p2b(9px,$lh)),
-      44px:('d':p2b(9px,$lh)),
-      64px:('d':p2b(1px,$lh))
-      ),
-    'vollkorn': (
-      12px:('d':p2b(5px,$lh)),
-      14px:('d':p2b(13px,$lh)),
-      16px:('d':p2b(12px,$lh)),
-      18px:('d':p2b(12px,$lh)),
-      20px:('d':p2b(11px,$lh)),
-      22px:('d':p2b(11px,$lh)),
-      24px:('d':p2b(10px,$lh)),
-      26px:('d':p2b(9px,$lh)),
-      28px:('d':p2b(9px,$lh)),
-      30px:('d':p2b(0px,$lh), 2:p2b(8px,$lh)),
-      32px:('d':p2b(0px,$lh)),
-      34px:('d':p2b(0px,$lh)),
-      36px:('d':p2b(15px,$lh)),
-      38px:('d':p2b(15px,$lh)),
-      40px:('d':p2b(14px,$lh)),
-      42px:('d':p2b(14px,$lh)),
-      44px:('d':p2b(13px,$lh)),
-      46px:('d':p2b(4px,$lh), 3:p2b(12px,$lh)),
-      48px:('d':p2b(4px,$lh)),
-      50px:('d':p2b(3px,$lh)),
-      52px:('d':p2b(3px,$lh)),
-      54px:('d':p2b(3px,$lh)),
-      56px:('d':p2b(2px,$lh)),
-      58px:('d':p2b(2px,$lh)),
-      60px:('d':p2b(1px,$lh)),
-      62px:('d':p2b(8px,$lh), 4:p2b(0px,$lh)),
-      64px:('d':p2b(8px,$lh)),
-      66px:('d':p2b(7px,$lh)),
-      68px:('d':p2b(7px,$lh)),
-      70px:('d':p2b(6px,$lh)),
-      72px:('d':p2b(6px,$lh)),
-      ),
-    'poppins': (
-      12px:('d':p2b(5px,$lh)),
-      14px:('d':p2b(12px,$lh)),
-      16px:('d':p2b(11px,$lh), 1:p2b(3px,$lh)),
-      18px:('d':p2b(11px,$lh), 1:p2b(3px,$lh)),
-      20px:('d':p2b(11px,$lh)),
-      22px:('d':p2b(10px,$lh)),
-      24px:('d':p2b(9px,$lh)),
-      26px:('d':p2b(9px,$lh)),
-      28px:('d':p2b(8px,$lh)),
-      30px:('d':p2b(0px,$lh)),
-      32px:('d':p2b(15px,$lh)),
-      34px:('d':p2b(14px,$lh)),
-      36px:('d':p2b(14px,$lh)),
-      38px:('d':p2b(13px,$lh)),
-      40px:('d':p2b(12px,$lh)),
-      42px:('d':p2b(12px,$lh)),
-      44px:('d':p2b(11px,$lh)),
-      46px:('d':p2b(3px,$lh)),
-      48px:('d':p2b(2px,$lh)),
-      50px:('d':p2b(1px,$lh)),
-      52px:('d':p2b(1px,$lh)),
-      54px:('d':p2b(0px,$lh)),
-      56px:('d':p2b(0px,$lh)),
-      58px:('d':p2b(15px,$lh)),
-      60px:('d':p2b(15px,$lh)),
-      62px:('d':p2b(6px,$lh)),
-      64px:('d':p2b(6px,$lh)),
-      66px:('d':p2b(5px,$lh)),
-      68px:('d':p2b(4px,$lh)),
-      70px:('d':p2b(4px,$lh)),
-      72px:('d':p2b(3px,$lh)),
-      ),
-    'futura-pt': (
-      12px:('d':p2b(4px,$lh)),
-      14px:('d':p2b(11px,$lh)),
-      16px:('d':p2b(11px,$lh)),
-      18px:('d':p2b(10px,$lh)),
-      20px:('d':p2b(9px,$lh)),
-      22px:('d':p2b(9px,$lh)),
-      24px:('d':p2b(8px,$lh)),
-      26px:('d':p2b(7px,$lh)),
-      28px:('d':p2b(7px,$lh)),
-      30px:('d':p2b(14px,$lh)),
-      32px:('d':p2b(14px,$lh)),
-      34px:('d':p2b(13px,$lh)),
-      36px:('d':p2b(12px,$lh)),
-      38px:('d':p2b(11px,$lh), 2:p2b(3px,$lh)),
-      40px:('d':p2b(10px,$lh)),
-      42px:('d':p2b(9px,$lh)),
-      44px:('d':p2b(9px,$lh)),
-      46px:('d':p2b(1px,$lh), 3:p2b(9px,$lh)),
-      48px:('d':p2b(0px,$lh), 3:p2b(8px,$lh)),
-      50px:('d':p2b(15px,$lh)),
-      52px:('d':p2b(15px,$lh), 3:p2b(7px,$lh)),
-      54px:('d':p2b(14px,$lh)),
-      56px:('d':p2b(13px,$lh)),
-      58px:('d':p2b(12px,$lh)),
-      60px:('d':p2b(12px,$lh)),
-      62px:('d':p2b(3px,$lh)),
-      64px:('d':p2b(2px,$lh)),
-      66px:('d':p2b(2px,$lh)),
-      68px:('d':p2b(1px,$lh), 4:p2b(9px,$lh)),
-      70px:('d':p2b(0px,$lh)),
-      72px:('d':p2b(0px,$lh)),
-      ),
-    'georgia': (
-      12px:('d':p2b(4px,$lh)),
-      14px:('d':p2b(11px,$lh), 1.5:p2b(15px,$lh)),
-      16px:('d':p2b(11px,$lh), 1.5:p2b(15px,$lh)),
-      17px:('d':p2b(10px,$lh)),
-      18px:('d':p2b(10px,$lh), 1.5:p2b(14px, $lh)),
-      20px:('d':p2b(9px,$lh), 1.5:p2b(13px,$lh)),
-      21px:('d':p2b(9px,$lh)),
-      22px:('d':p2b(9px,$lh)),
-      24px:('d':p2b(8px,$lh)),
-      26px:('d':p2b(7px,$lh)),
-      28px:('d':p2b(6px,$lh), 2.5:p2b(2px,$lh)),
-      30px:('d':p2b(14px,$lh)),
-      32px:('d':p2b(13px,$lh)),
-      34px:('d':p2b(12px,$lh), 2.5:p2b(0px, $lh)),
-      36px:('d':p2b(12px,$lh)),
-      38px:('d':p2b(11px,$lh)),
-      40px:('d':p2b(10px,$lh)),
-      42px:('d':p2b(9px,$lh))
-      ),
-  'source-sans-pro': (
-    10px:('d':p2b(5px,$lh)),
+  // Open Sans
+  'open-sans':(
+    10px:('d':p2b(4px,$lh)),
     12px:('d':p2b(4px,$lh)),
-    14px:('d':p2b(11px,$lh), 1: p2b(3px,$lh)),
-    15px:('d':p2b(11px,$lh)),
-    16px:('d':p2b(10px,$lh), 1: p2b(2px,$lh)),
-    17px:('d':p2b(10px,$lh)),
-    18px:('d':p2b(10px,$lh), 1: p2b(2px,$lh)),
-    20px:('d':p2b(10px,$lh), 1: p2b(1px,$lh)),
-    21px:('d':p2b(9px,$lh)),
-    22px:('d':p2b(8px,$lh)),
-    24px:('d':p2b(8px,$lh)),
-    26px:('d':p2b(7px,$lh)),
-    28px:('d':p2b(6px,$lh)),
-    30px:('d':p2b(13px,$lh)),
-    32px:('d':p2b(13px,$lh)),
-    34px:('d':p2b(12px,$lh)),
-    36px:('d':p2b(12px,$lh)),
-    38px:('d':p2b(11px,$lh)),
-    40px:('d':p2b(10px,$lh)),
-    42px:('d':p2b(10px,$lh)),
-    44px:('d':p2b(9px,$lh)),
-    60px:('d':p2b(10px,$lh))
-    ),
-  'oswald': (
-    11px:('d':p2b(3px,$lh)),
-    12px:('d':p2b(3px,$lh)),
-    14px:('d':p2b(10px,$lh)),
-    16px:('d':p2b(9px,$lh)),
-    18px:('d':p2b(8px,$lh)),
-    20px:('d':p2b(7px,$lh)),
-    22px:('d':p2b(6px,$lh)),
-    24px:('d':p2b(5px,$lh)),
-    26px:('d':p2b(5px,$lh)),
-    28px:('d':p2b(4px,$lh)),
-    30px:('d':p2b(11px,$lh)),
-    32px:('d':p2b(10px,$lh)),
-    34px:('d':p2b(9px,$lh)),
-    36px:('d':p2b(8px,$lh)),
-    38px:('d':p2b(7px,$lh)),
-    40px:('d':p2b(6px,$lh)),
-    42px:('d':p2b(5px,$lh)),
-    44px:('d':p2b(5px,$lh)),
-    46px:('d':p2b(11px,$lh)),
-    48px:('d':p2b(11px,$lh)),
-    50px:('d':p2b(9px,$lh)),
-    52px:('d':p2b(9px,$lh)),
-    54px:('d':p2b(8px,$lh)),
-    56px:('d':p2b(7px,$lh)),
-    58px:('d':p2b(6px,$lh)),
-    60px:('d':p2b(5px,$lh)),
-    62px:('d':p2b(12px,$lh)),
-    64px:('d':p2b(12px,$lh)),
-    66px:('d':p2b(10px,$lh)),
-    68px:('d':p2b(10px,$lh)),
-    70px:('d':p2b(8px,$lh)),
-    72px:('d':p2b(8px,$lh)),
-    ),
-  'open-sans': (
-    12px:('d':p2b(4px,$lh)),
-    14px:('d':p2b(11px,$lh), 1:p2b(2px,$lh)),
+    14px:('d':p2b(3px,$lh)),
     16px:('d':p2b(10px,$lh)),
-    18px:('d':p2b(9px,$lh)),
+    18px:('d':p2b(9px,$lh)),    
     20px:('d':p2b(9px,$lh)),
     22px:('d':p2b(7px,$lh)),
     24px:('d':p2b(7px,$lh)),
     26px:('d':p2b(6px,$lh)),
     28px:('d':p2b(5px,$lh)),
-    30px:('d':p2b(13px,$lh)),
+    30px:('d':p2b(5px,$lh)),
     32px:('d':p2b(12px,$lh)),
     34px:('d':p2b(11px,$lh)),
     36px:('d':p2b(11px,$lh)),
     38px:('d':p2b(9px,$lh)),
     40px:('d':p2b(9px,$lh)),
-    42px:('d':p2b(8px,$lh))
-    ),
-  'raleway': (
-    11px:('d':p2b(5px,$lh)),
-    12px:('d':p2b(4px,$lh)),
-    14px:('d':p2b(11px,$lh)),
-    16px:('d':p2b(11px,$lh)),
-    17px:('d':p2b(10px,$lh)),
-    18px:('d':p2b(10px,$lh)),
-    20px:('d':p2b(9px,$lh)),
-    22px:('d':p2b(8px,$lh)),
-    24px:('d':p2b(8px,$lh)),
-    26px:('d':p2b(7px,$lh)),
-    28px:('d':p2b(7px,$lh)),
-    30px:('d':p2b(14px,$lh)),
-    32px:('d':p2b(13px,$lh)),
-    34px:('d':p2b(12px,$lh)),
-    36px:('d':p2b(11px,$lh)),
-    38px:('d':p2b(11px,$lh)),
-    40px:('d':p2b(10px,$lh)),
-    42px:('d':p2b(10px,$lh))
-    ),
-  'roboto': (
-    12px:('d':p2b(4px,$lh)),
-    14px:('d':p2b(11px,$lh), 1:p2b(3px, $lh), 1.5:p2b(15px, $lh)),
-    16px:('d':p2b(11px,$lh), 1:p2b(3px, $lh), 1.5:p2b(15px, $lh)),
-    17px:('d':p2b(10px,$lh)),
-    18px:('d':p2b(10px,$lh)),
-    20px:('d':p2b(9px,$lh), 1.5:p2b(5px,$lh)),
-    22px:('d':p2b(9px,$lh)),
-    24px:('d':p2b(8px,$lh), 3:p2b(7px,$lh)),
-    25px:('d':p2b(8px,$lh)),
-    26px:('d':p2b(7px,$lh)),
-    28px:('d':p2b(7px,$lh)),
-    30px:('d':p2b(14px,$lh), 2:p2b(6px,$lh)),
-    32px:('d':p2b(13px,$lh)),
-    34px:('d':p2b(12px,$lh), 3:p2b(11px,$lh)),
-    36px:('d':p2b(12px,$lh), 2:p2b(4px,$lh)),
-    38px:('d':p2b(11px,$lh)),
-    40px:('d':p2b(11px,$lh)),
-    42px:('d':p2b(10px,$lh)),
-    44px:('d':p2b(9px,$lh)),
-    45px:('d':p2b(1px,$lh), 3:p2b(8px,$lh), 3.5:p2b(5px,$lh)),
-    46px:('d':p2b(0px,$lh)),
-    48px:('d':p2b(0px,$lh)),
-    50px:('d':p2b(15px,$lh)),
-    52px:('d':p2b(15px,$lh)),
-    54px:('d':p2b(14px,$lh)),
-    56px:('d':p2b(13px,$lh)),
-    58px:('d':p2b(12px,$lh)),
-    60px:('d':p2b(12px,$lh)),
-    62px:('d':p2b(3px,$lh)),
-    64px:('d':p2b(3px,$lh), 4:p2b(11px,$lh)),
-    66px:('d':p2b(2px,$lh)),
-    68px:('d':p2b(1px,$lh)),
-    70px:('d':p2b(0px,$lh)),
-    88px:('d':p2b(2px,$lh)),
-    111px:('d':p2b(10px,$lh))
-    ),
-  'lato': (
-    12px:('d':p2b(4px,$lh)),
-    14px:('d':p2b(10px,$lh), 1:p2b(3px, $lh)),
-    15px:('d':p2b(10px,$lh), 1:p2b(1px, $lh)),
-    16px:('d':p2b(10px,$lh), 1:p2b(2px, $lh)),
-    17px:('d':p2b(9px,$lh)),
-    18px:('d':p2b(9px,$lh)),
-    20px:('d':p2b(8px,$lh)),
-    21px:('d':p2b(8px,$lh)),
-    22px:('d':p2b(7px,$lh), 1:p2b(16px, $lh)),
-    24px:('d':p2b(6px,$lh)),
-    25px:('d':p2b(6px,$lh)),
-    26px:('d':p2b(6px,$lh)),
-    28px:('d':p2b(5px,$lh)),
-    30px:('d':p2b(12px,$lh)),
-    32px:('d':p2b(11px,$lh)),
-    34px:('d':p2b(10px,$lh)),
-    36px:('d':p2b(10px,$lh), 2:p2b(2px, $lh)),
-    38px:('d':p2b(9px,$lh)),
-    40px:('d':p2b(9px,$lh)),
     42px:('d':p2b(8px,$lh)),
     44px:('d':p2b(7px,$lh)),
-    45px:('d':p2b(14px,$lh)),
-    46px:('d':p2b(14px,$lh)),
-    48px:('d':p2b(13px,$lh), 3:p2b(6px, $lh)),
+    46px:('d':p2b(6px,$lh)),
+    48px:('d':p2b(14px,$lh)),
     50px:('d':p2b(13px,$lh)),
     52px:('d':p2b(12px,$lh)),
     54px:('d':p2b(11px,$lh)),
     56px:('d':p2b(10px,$lh)),
     58px:('d':p2b(10px,$lh)),
-    60px:('d':p2b(8px,$lh), 3:p2b(1px, $lh)),
-    68px:('d':p2b(14px,$lh)),
-    70px:('d':p2b(13px,$lh)),
-    72px:('d':p2b(13px,$lh)),
-    74px:('d':p2b(12px,$lh)),
-    76px:('d':p2b(11px,$lh)),
-    78px:('d':p2b(2px,$lh))
+    60px:('d':p2b(9px,$lh))
     ),
-  'proxima-nova': (
-    12px:('d':p2b(4px,$lh)),
-    13px:('d':p2b(11px,$lh)),
-    14px:('d':p2b(12px,$lh), 1:p2b(4px,$lh)),
-    16px:('d':p2b(11px,$lh), 1:p2b(3px,$lh)),
-    18px:('d':p2b(10px,$lh)),
-    20px:('d':p2b(10px,$lh)),
-    21px:('d':p2b(10px,$lh)),
-    22px:('d':p2b(9px,$lh)),
-    24px:('d':p2b(9px,$lh)),
-    26px:('d':p2b(8px,$lh)),
-    28px:('d':p2b(7px,$lh)),
-    30px:('d':p2b(15px,$lh), 2:p2b(7px,$lh)),
-    32px:('d':p2b(14px,$lh), 2:p2b(6px,$lh)),
-    34px:('d':p2b(14px,$lh)),
-    36px:('d':p2b(13px,$lh)),
-    38px:('d':p2b(12px,$lh)),
-    40px:('d':p2b(11px,$lh)),
-    42px:('d':p2b(11px,$lh)),
-    48px:('d':p2b(1px,$lh), 3:p2b(9px,$lh)),
-    56px:('d':p2b(14px,$lh)),
-    58px:('d':p2b(14px,$lh)),
-    64px:('d':p2b(4px,$lh), 4:p2b(11px,$lh)),
-    90px:('d':p2b(3px,$lh))
-    ),
-  'proxima-nova-condensed': (
-    12px:('d':p2b(5px,$lh)),
-    14px:('d':p2b(12px,$lh)),
-    16px:('d':p2b(12px,$lh)),
-    18px:('d':p2b(12px,$lh)),
-    20px:('d':p2b(11px,$lh)),
-    22px:('d':p2b(11px,$lh)),
-    24px:('d':p2b(10px,$lh)),
-    26px:('d':p2b(9px,$lh)),
-    28px:('d':p2b(9px,$lh)),
-    30px:('d':p2b(1px,$lh)),
+    // Roboto
+    'roboto':(
+    10px:('d':p2b(0px,$lh)),
+    12px:('d':p2b(0px,$lh)),
+    14px:('d':p2b(0px,$lh)),
+    16px:('d':p2b(0px,$lh)),
+    18px:('d':p2b(0px,$lh)),    
+    20px:('d':p2b(0px,$lh)),
+    22px:('d':p2b(0px,$lh)),
+    24px:('d':p2b(0px,$lh)),
+    26px:('d':p2b(0px,$lh)),
+    28px:('d':p2b(0px,$lh)),
+    30px:('d':p2b(0px,$lh)),
     32px:('d':p2b(0px,$lh)),
-    34px:('d':p2b(15px,$lh)),
-    36px:('d':p2b(15px,$lh)),
-    38px:('d':p2b(14px,$lh)),
-    40px:('d':p2b(14px,$lh)),
-    42px:('d':p2b(13px,$lh))
-    ),
-  'merriweather': (
-    12px:('d':p2b(4px,$lh)),
-    14px:('d':p2b(11px,$lh)),
-    16px:('d':p2b(10px,$lh)),
-    18px:('d':p2b(10px,$lh)),
-    20px:('d':p2b(9px,$lh)),
-    22px:('d':p2b(8px,$lh)),
-    24px:('d':p2b(7px,$lh)),
-    26px:('d':p2b(7px,$lh)),
-    28px:('d':p2b(6px,$lh)),
-    30px:('d':p2b(13px,$lh)),
-    32px:('d':p2b(12px,$lh)),
-    34px:('d':p2b(12px,$lh)),
-    36px:('d':p2b(11px,$lh)),
-    38px:('d':p2b(11px,$lh)),
-    40px:('d':p2b(10px,$lh)),
-    42px:('d':p2b(9px,$lh)),
-    44px:('d':p2b(8px,$lh)),
-    46px:('d':p2b(15px,$lh)),
-    48px:('d':p2b(15px,$lh)),
-    50px:('d':p2b(14px,$lh)),
-    52px:('d':p2b(14px,$lh)),
-    54px:('d':p2b(13px,$lh)),
-    56px:('d':p2b(12px,$lh)),
-    58px:('d':p2b(12px,$lh)),
-    60px:('d':p2b(11px,$lh)),
-    62px:('d':p2b(2px,$lh)),
-    64px:('d':p2b(1px,$lh)),
-    66px:('d':p2b(0px,$lh)),
-    68px:('d':p2b(15px,$lh)),
-    70px:('d':p2b(15px,$lh)),
-    72px:('d':p2b(14px,$lh)),
-    ),
-  'montserrat': (
-    12px:('d':p2b(4px,$lh)),
-    14px:('d':p2b(11px,$lh)),
-    16px:('d':p2b(11px,$lh), 1:p2b(3px,$lh)),
-    18px:('d':p2b(10px,$lh)),
-    20px:('d':p2b(9px,$lh)),
-    22px:('d':p2b(9px,$lh)),
-    24px:('d':p2b(8px,$lh)),
-    26px:('d':p2b(7px,$lh)),
-    28px:('d':p2b(6px,$lh)),
-    30px:('d':p2b(14px,$lh)),
-    32px:('d':p2b(13px,$lh)),
-    34px:('d':p2b(12px,$lh)),
-    36px:('d':p2b(11px,$lh)),
-    38px:('d':p2b(11px,$lh)),
-    40px:('d':p2b(10px,$lh)),
-    42px:('d':p2b(9px,$lh))
-    ),
-    'weissenhof-grotesk': (
-      12px:('d':p2b(4px,$lh)),
-      14px:('d':p2b(11px,$lh)),
-      16px:('d':p2b(11px,$lh)),
-      18px:('d':p2b(10px,$lh)),
-      20px:('d':p2b(9px,$lh)),
-      22px:('d':p2b(9px,$lh)),
-      24px:('d':p2b(9px,$lh)),
-      26px:('d':p2b(8px,$lh)),
-      28px:('d':p2b(7px,$lh)),
-      30px:('d':p2b(14px,$lh)),
-      32px:('d':p2b(14px,$lh)),
-      34px:('d':p2b(13px,$lh)),
-      36px:('d':p2b(12px,$lh)),
-      38px:('d':p2b(12px,$lh)),
-      40px:('d':p2b(11px,$lh)),
-      42px:('d':p2b(10px,$lh)),
-      44px:('d':p2b(10px,$lh)),
-      46px:('d':p2b(1px,$lh)),
-      48px:('d':p2b(0px,$lh), 3:p2b(8px,$lh)),
-      50px:('d':p2b(0px,$lh))
-    ),
-    'program': (
-      12px:('d':p2b(5px,$lh)),
-      14px:('d':p2b(12px,$lh)),
-      16px:('d':p2b(11px,$lh)),
-      18px:('d':p2b(11px,$lh)),
-      20px:('d':p2b(11px,$lh)),
-      22px:('d':p2b(10px,$lh)),
-      24px:('d':p2b(9px,$lh)),
-      26px:('d':p2b(9px,$lh)),
-      28px:('d':p2b(8px,$lh)),
-      30px:('d':p2b(0px,$lh)),
-      32px:('d':p2b(15px,$lh)),
-      34px:('d':p2b(15px,$lh)),
-      36px:('d':p2b(14px,$lh)),
-      38px:('d':p2b(14px,$lh)),
-      40px:('d':p2b(13px,$lh)),
-      42px:('d':p2b(13px,$lh)),
-      44px:('d':p2b(12px,$lh)),
-      45px:('d':p2b(4px,$lh), 3:p2b(12px,$lh)),
-      46px:('d':p2b(3px,$lh), 3:p2b(11px,$lh)),
-      48px:('d':p2b(3px,$lh)),
-      50px:('d':p2b(2px,$lh)),
-      52px:('d':p2b(2px,$lh)),
-      54px:('d':p2b(1px,$lh)),
-      56px:('d':p2b(1px,$lh)),
-      58px:('d':p2b(0px,$lh)),
-      60px:('d':p2b(0px,$lh)),
-      62px:('d':p2b(7px,$lh)),
-      64px:('d':p2b(7px,$lh), 4:p2b(15px,$lh)),
-      70px:('d':p2b(7px,$lh), 4:p2b(12px,$lh)),
-      88px:('d':p2b(8px,$lh), 5:p2b(15px,$lh))
-    ),
-    'caveat': (
-      12px:('d':p2b(4px,$lh)),
-      14px:('d':p2b(12px,$lh)),
-      16px:('d':p2b(11px,$lh)),
-      18px:('d':p2b(10px,$lh)),
-      20px:('d':p2b(10px,$lh)),
-      22px:('d':p2b(9px,$lh)),
-      24px:('d':p2b(8px,$lh)),
-      26px:('d':p2b(8px,$lh)),
-      28px:('d':p2b(7px,$lh)),
-      30px:('d':p2b(14px,$lh)),
-      32px:('d':p2b(14px,$lh)),
-      34px:('d':p2b(13px,$lh)),
-      36px:('d':p2b(12px,$lh)),
-      38px:('d':p2b(12px,$lh)),
-      40px:('d':p2b(11px,$lh)),
-      42px:('d':p2b(11px,$lh)),
-      44px:('d':p2b(10px,$lh)),
-      46px:('d':p2b(1px,$lh)),
-      48px:('d':p2b(0px,$lh)),
-      50px:('d':p2b(0px,$lh))
-    ),
-    'myriad-pro':(
-    12px:('d':p2b(4px,$lh)),
-    14px:('d':p2b(11px,$lh)),
-    16px:('d':p2b(10px,$lh)),
-    18px:('d':p2b(10px,$lh)),
-    20px:('d':p2b(9px,$lh)),
-    22px:('d':p2b(8px,$lh)),
-    24px:('d':p2b(7px,$lh)),
-    26px:('d':p2b(7px,$lh)),
-    28px:('d':p2b(6px,$lh)),
-    30px:('d':p2b(13px,$lh), 2:p2b(5px,$lh)),
-    32px:('d':p2b(12px,$lh)),
-    34px:('d':p2b(11px,$lh), 2:p2b(3px,$lh)),
-    36px:('d':p2b(10px,$lh)),
-    38px:('d':p2b(10px,$lh)),
-    40px:('d':p2b(9px,$lh)),
-    42px:('d':p2b(8px,$lh)),
-    44px:('d':p2b(7px,$lh)),
-    45px:('d':p2b(15px,$lh), 3:p2b(7px,$lh)),
-    46px:('d':p2b(15px,$lh)),
-    48px:('d':p2b(14px,$lh)),
-    50px:('d':p2b(13px,$lh)),
-    52px:('d':p2b(12px,$lh)),
-    54px:('d':p2b(12px,$lh)),
-    56px:('d':p2b(11px,$lh)),
-    58px:('d':p2b(10px,$lh)),
-    60px:('d':p2b(9px,$lh)),
-    62px:('d':p2b(1px,$lh)),
-    64px:('d':p2b(0px,$lh)),
-    65px:('d':p2b(0px,$lh)),
-    66px:('d':p2b(15px,$lh)),
-    68px:('d':p2b(15px,$lh)),
-    70px:('d':p2b(14px,$lh)),
-    72px:('d':p2b(13px,$lh)),
-    112px:('d':p2b(6px,$lh)),
-    ),
-    'nimbus-sans-condensed':(
-    12px:('d':p2b(4px,$lh)),
-    14px:('d':p2b(12px,$lh), 1.5:p2b(0px,$lh)),
-    16px:('d':p2b(11px,$lh), 1.5:p2b(15px,$lh)),
-    18px:('d':p2b(10px,$lh)),
-    20px:('d':p2b(10px,$lh), 1.5:p2b(14px,$lh)),
-    22px:('d':p2b(9px,$lh)),
-    24px:('d':p2b(8px,$lh)),
-    26px:('d':p2b(8px,$lh)),
-    28px:('d':p2b(7px,$lh)),
-    30px:('d':p2b(14px,$lh)),
-    32px:('d':p2b(13px,$lh)),
-    34px:('d':p2b(13px,$lh)),
-    36px:('d':p2b(12px,$lh)),
-    38px:('d':p2b(12px,$lh)),
-    40px:('d':p2b(11px,$lh)),
-    42px:('d':p2b(10px,$lh)),
-    44px:('d':p2b(9px,$lh)),
-    45px:('d':p2b(1px,$lh), 3.5:p2b(5px, $lh)),
-    46px:('d':p2b(1px,$lh)),
+    34px:('d':p2b(0px,$lh)),
+    36px:('d':p2b(0px,$lh)),
+    38px:('d':p2b(0px,$lh)),
+    40px:('d':p2b(0px,$lh)),
+    42px:('d':p2b(0px,$lh)),
+    44px:('d':p2b(0px,$lh)),
+    46px:('d':p2b(0px,$lh)),
     48px:('d':p2b(0px,$lh)),
     50px:('d':p2b(0px,$lh)),
-    52px:('d':p2b(15px,$lh)),
-    54px:('d':p2b(14px,$lh)),
-    56px:('d':p2b(13px,$lh)),
-    58px:('d':p2b(13px,$lh)),
-    60px:('d':p2b(12px,$lh)),
-    62px:('d':p2b(4px,$lh)),
-    64px:('d':p2b(3px,$lh)),
-    65px:('d':p2b(3px,$lh)),
-    66px:('d':p2b(2px,$lh), 4:p2b(10px,$lh)),
-    68px:('d':p2b(1px,$lh)),
-    70px:('d':p2b(1px,$lh)),
-    72px:('d':p2b(0px,$lh)),
-    88px:('d':p2b(3px,$lh))
+    52px:('d':p2b(0px,$lh)),
+    54px:('d':p2b(0px,$lh)),
+    56px:('d':p2b(0px,$lh)),
+    58px:('d':p2b(0px,$lh)),
+    60px:('d':p2b(0px,$lh))
     )
   );
