--- a/_variables.scss
+++ b/_variables.scss
@@ -1,6 +1,8 @@
 $fallback-font-stack: Helvetica, Arial, Sans-Serif !default;
 $default-font-family: "Open Sans" !default;
-$default-trailing-space: 2 !default;
 $base-line-height: 14px !default;
 $base-font-size: 16px !default;
 $visual-grid: true !default;
+$min-line-height-gap: 1px !default;
+
+$base-base-font-db: () !default;
