--- a/examples/css/examples.css
+++ b/examples/css/examples.css
@@ -1,3 +1,4 @@
+/** This is a dynamically generated file **/
 html {
   font-size: 16px;
   line-height: 14px;
@@ -778,15 +779,5 @@ body {
   padding-bottom: 0.75rem;
   font-size: 5.25rem;
   line-height: 98px;
-  font-family: "Open Sans", Helvetica, Arial, Sans-Serif;
-  font-weight: 400; }
-
-.base-base-12 {
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-top: 0.625rem;
-  padding-bottom: 0.25rem;
-  font-size: 0.75rem;
-  line-height: 56px;
   font-family: "Open Sans", Helvetica, Arial, Sans-Serif;
   font-weight: 400; }
